# python-template

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml
