[project]
name = "{{cookiecutter.package_name}}"
url = "{{cookiecutter.url}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.8, <4.0"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{cookiecutter.package_name}}*"]

[tool.setuptools_scm]
write_to = "src/{{cookiecutter.package_name}}/version.py"

[tool.isort]
profile = "black"
multi_line_output = 3
extend-exclude = "src/{{cookiecutter.package_name}}/version.py"
