[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/{{cookiecutter.package_name}}/version.py"

[tool.black]
extend-exclude = '^/src/{{cookiecutter.package_name}}/version.py'

[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"

[tool.ruff]
extend-exclude = ["docs", "venv", "^/src/{{cookiecutter.package_name}}/version.py"]
target-version = "py38"
